[package]
name = "net-mc"
version = "0.1.0"
edition = "2021"
description = "A library for sending and receiving minecraft packets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/comblock/net-mc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aes = "0.7.4"
byteorder = "1.4"
cfb8 = "0.7.1"
flate2 = "1.0"
hematite-nbt = "0.5.2"
uuid = "1.0.0"

[dev-dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde_json = "1.0"
ms_auth_mc = {path = "../ms_auth_mc"}
sha1 = "0.10"
rsa_public_encrypt_pkcs1 = "0.4"
rand = "0.8"